fixing Sidebar Navigation Support Arrow when collapsed (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -138,4 +138,10 @@
   @media (min-width: breakpoint.$desktop) {
     display: flex;
   }
+
+  &.isCollapsed {
+    img {
+      transform: rotate(180deg);
+    }
+  }
 }
